# tilelang

./: .buildinfo  .clang-format  .clang-tidy  .editorconfig  .git_commit.txt  .gitignore  .pre-commit-config.yaml  .pymarkdown  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  THIRDPARTYNOTICES.txt  bench.md  draft.md  format.sh  genindex.html  index.html  install_cpu.sh  install_cuda.sh  install_metal.sh  install_rocm.sh  objects.inv  privacy.html  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements-lint.txt  requirements-rocm.txt  requirements-test-cuda.txt  requirements-test-metal.txt  requirements-test-rocm.txt  requirements-test.txt  requirements.txt  run_docker.sh  search.html  searchindex.js  (+5 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  questions.yml  release-plan.yml
.github/workflows/: amd_ci.yml  bot.yml  ci.yml  cuda-ci.yml  dist.yml  format.yml  metal-ci.yml  metal_ci.yml  pr-perfbench-bot.yml  pr-regression-test-bot.yml  pr-reminder-bot.yml  publish-docs.yml  publish_docs.yml  reminder.yml  rocm-ci.yml  test.yml
MInference_kernels/: block_sparse.py  vs_sparse.py  vs_sparse_1.py
aica_example/: aicart.py  build.sh  example_gemm.py  fa_forward_bshd.py  flash_attn.cpp  gemm_1024_2048_5192.cpp  gemm_aica.cpp  mm_rs.cpp  mm_rs.py  mm_trans.cpp  mm_trans.py  norm_aica.cpp  rms_norm.py  test_fa.py  test_mm.py  test_mm_trans.py  test_norm.py  test_norm_rt.py
benchmark/blocksparse_attention/: benchmark_library_dense_fmha.py  benchmark_tilelang_block_sparse_fmha.py  benchmark_torch_block_sparse_fmha.py  benchmark_triton_block_sparse_fmha.py
benchmark/mamba2/: README.md  benchmark_mamba_chunk_scan.py
benchmark/matmul/: README.md  benchmark_matmul.py  benchmark_matmul_intrinsic.py  benchmark_matmul_sp.py
benchmark/matmul_fp8/: README.md  benchmark_matmul.py
cmake/: load_tvm.cmake
cmake/pypi-z3/: FindZ3.cmake
docker/: Dockerfile.cu118  Dockerfile.cu120  Dockerfile.cu121  Dockerfile.cu123  Dockerfile.cu124  Dockerfile.cu125  Dockerfile.cu126  Dockerfile.cu128  Dockerfile.rocm
docs/: .gitignore  CNAME  Makefile  README.md  conf.py  index.md  plan.md  requirements.txt  schedule_templates.md  spelling_wordlist.txt
docs/_static/: custom.css
docs/compiler_internals/: graph_compile_presentation.md  inject_fence_proxy.md  letstmt_inline.md  tensor_checks.md
docs/deeplearning_operators/: deepseek_mla.md  elementwise.md  gemv.md  matmul.md  matmul_sparse.md
docs/get_started/: Installation.md  Installation.rst  overview.md  targets.md
docs/programming_guides/: autotuning.md  control_flow.md  instructions.md  language_basics.md  overview.md  type_system.md
docs/runtime_internals/: stubs.md
docs/tutorials/: auto_tuning.md  debug_tools_for_tilelang.md  logging.md
examples/: conftest.py  graph_trace_example.py  pytest.ini  quickstart.py  test_mm_cost.py
examples/MInference/: example_vertical_slash_sparse_attn.py
examples/amd/: example_amd_flash_attn_bwd.py  example_amd_flash_attn_fwd.py  test.sh
examples/analyze/: README.md  example_conv_analyze.py  example_gemm_analyze.py
examples/attention_sink/: README.md  bench_example_attention_sink.py  benchmark_gqa_sink_fwd.py  benchmark_mha_sink_fwd.py  example_gqa_sink_bwd_bhsd.py  example_gqa_sink_fwd_bhsd_wgmma_pipelined.py  example_mha_sink_bwd_bhsd.py  example_mha_sink_fwd_bhsd.py  example_mha_sink_fwd_bhsd_wgmma_pipelined.py  regression_attention_sink.py  test_example_attention_sink.py
examples/bitnet-1.58b/: README.md  benchmark.sh  benchmark_generate.py  benchmark_inference_latency.py  benchmark_model_10k_loops.py  configuration_bitnet.py  eval_correctness.py  eval_gpu_memory.py  eval_ppl.py  eval_utils.py  load_from_quantized.py  modeling_bitnet.py  nvidia_measure_memory.sh  requirements.txt  tokenization_bitnet.py  utils_quant.py
examples/blocksparse_attention/: README.md  bench_example_blocksparse_attention.py  block_sparse_attn_triton.py  example_sparse_gqa_decode_varlen_indice.py  example_tilelang_block_sparse_attn.py  example_tilelang_sparse_gqa_decode_paged.py  example_tilelang_sparse_gqa_decode_varlen_indice.py  example_tilelang_sparse_gqa_decode_varlen_mask.py  example_triton_sparse_gqa_decode_varlen_indice.py  example_triton_sparse_gqa_decode_varlen_mask.py  heuristic.py  regression_example_blocksparse_attention.py  test_example_blocksparse_attention.py
examples/blocksparse_gemm/: bench_example_blocksparse_gemm.py  example_blocksparse_gemm.py  regression_example_blocksparse_gemm.py
examples/cast/: bench_example_cast.py  example_group_per_split_token_cast_to_fp8.py  example_per_token_cast_to_fp8.py  example_triton_cast_to_fp8.py  regression_example_cast.py  test_example_cast.py
examples/compile_flags/: usecase.py
examples/convolution/: bench_example_convolution.py  example_convolution.py  example_convolution_autotune.py  regression_example_convolution.py  test_example_convolution.py
examples/cumsum/: example_tilelang_cumsum.py
examples/deepseek_deepgemm/: example_deepgemm_fp8_2xAcc.py  test_example_deepgemm_fp8_2xAcc.py
examples/deepseek_mhc/: example_mhc_bwd.py  example_mhc_post.py  example_mhc_pre.py  regression_example_mhc.py
examples/deepseek_mla/: README.md  bench_example_mla_decode.py  benchmark_mla.py  example_mla_decode.py  example_mla_decode_amd.py  example_mla_decode_paged.py  example_mla_decode_persistent.py  example_mla_decode_ws.py  regression_example_mla_decode.py  test_example_mla_decode.py  torch_refs.py
examples/deepseek_nsa/: bench_example_tilelang_nsa.py  example_tilelang_nsa_bwd.py  example_tilelang_nsa_decode.py  example_tilelang_nsa_fwd.py  example_tilelang_nsa_fwd_varlen.py  example_triton_nsa_bwd.py  example_triton_nsa_fwd.py  example_triton_nsa_fwd_varlen.py  reference.py  requirements.txt  (+2 more)
fa_opt/: test.py
get_started/: Installation.html  language_ref.html
ops/: setup.py
src/: ir.cc
testing/: conftest.py  test_perf_regression_runner.py
tilelang/: __init__.py  _ffi_api.py  autodd.py  env.py  ir.py  libinfo.py  version.py
(+1064 files in other folders)
